[package]
name = "ts-cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.6"