[package]
name = "ts-cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "*"
#reqwest = { version = "0.11", features = ["blocking"] }

[dependencies]
tree-sitter = "0.20.6"
anyhow = "1.0.6"

[dev-dependencies]
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", branch = "master" }
